# api/controllers/keyListsController.js
@@ -1,7 +1,8 @@
 'use strict';
 
 var mongoose = require('mongoose'),
-  keyLists = mongoose.model('keyLists');
+  keyLists = mongoose.model('keyLists'),
+  User = mongoose.model('User');
 
 // exports.list_all_keys = function(req, res) {
 //   keyLists.find({}, function(err, key) {
@@ -26,8 +27,43 @@ exports.read_a_key = function(req, res) {
   }, function(err, key) {
     if (err)
       res.send(err);
-    res.json(key);
+    // res.json(key);
+    res.json({
+      "node_number" : req.params.id,
+      "key" : key
+    });
+
   });
+};
+
+exports.get_private_key = function(req, res) {
+  if (!req.payload._id) {
+    res.status(401).json({
+      "message" : "UnauthorizedError: private profile"
+    });
+  } else {
+    User
+      .findById(req.payload._id)
+      .exec(function(err, user) {
+        if (err)
+          res.send(err);
+        else {
+          keyLists.find({
+            address: req.params.id,
+            node_number: user.node_number,
+          }, function(err, key) {
+            if (err)
+              res.send(err);
+            res.json(key);
+            // res.json({
+            //   "node_number" : user.node_number,
+            //   "address" : req.params.id,
+            //   "key" : key
+            // });
+          });
+        }
+      });
+  }
 };
 
 // exports.update_a_key = function(req, res) {
