# api/routes/simChainRoutes.js
@@ -8,19 +8,10 @@ module.exports = function(app) {
     .post(blockLists.create_a_block);
 
   app.route('/block/height/:id')
-    .get(blockLists.read_a_block)
+    .get(blockLists.read_a_block);
 
   app.route('/block/latest')
-    .get(blockLists.read_a_latest_block)
-
-  // keyLists --------------------
-  var keyLists = require('../controllers/keyListsController');
-
-  app.route('/key')
-    .post(keyLists.create_a_key);
-
-  app.route('/key/node/:id')
-    .get(keyLists.read_a_key)
+    .get(blockLists.read_a_latest_block);
 
   // txLists ----------------------
   var txLists = require('../controllers/txListsController');
@@ -37,11 +28,4 @@ module.exports = function(app) {
   app.route('/tx/requests')
     .get(txLists.list_all_tx_requests)
     .post(txLists.create_a_tx_requests);
-
-  var jwt = require('express-jwt');
-
-  var auth = jwt({
-    secret: 'MY_SECRET',
-    userProperty: 'payload'
-  });
 };
